Создал метод выбора компораторов перещёл на treeSet